Mon Jun  4 00:11:51 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_proc_exec_e): don't use ISSPACE().  \f, \r and \v
	  are not word separator in Bourne shell.

Sun Jun  3 23:47:30 2012  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_exec_arg): remove argc and argv fields.
	  add use_shell, argv_str and argv_buf fields.

	* process.c (rb_proc_exec_e): don't split shell command line arguments
	  here to avoid memory allocation in a child process.
	  (rb_exec_fillarg): split shell command line arguments here.
	  (proc_exec_v): takes argv_str argument instead of argv.
	  (rb_proc_exec_ne): removed.
	  (rb_proc_exec_n): removed.
	  (rb_run_exec_options_err): don't initialize the removed fields.
	  (rb_exec_err): don't initialize the removed fields.
	  call proc_exec_v directly instead of rb_proc_exec_ne.
	  (rb_spawn_process): use use_shell field.

Sun Jun  3 21:53:00 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* GPL: update text of GPLv2. [ruby-core:44488] [Bug #6328]
	  http://www.gnu.org/licenses/gpl-2.0.txt

Sun Jun  3 21:22:52 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_exec_getargs): remove rb_exec_arg argument.

Sun Jun  3 21:14:26 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* marshal.c: calls directly rb_{Complex,Rational}_marshal_load().
	  But now disabled. [experimental]
	* complex.c: followed the above.
	* rational.c: ditto.
	* include/rub/intern.h: ditto.

Sun Jun  3 21:18:17 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_check_argv): use rb_str_new_frozen instead of
	  rb_str_new4.

Sun Jun  3 20:10:52 2012  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_proc_exec_e): extended version of rb_proc_exec() to
	  call execle().
	  (rb_proc_exec): use rb_proc_exec_e().
	  (rb_exec_err): use rb_proc_exec_e().

Sun Jun  3 19:47:18 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread.c (vm_living_thread_num): suppress a warning.

Sun Jun  3 17:23:52 2012  Tanaka Akira  <akr@fsij.org>
